--- a/.drone.yml
+++ b/.drone.yml
@@ -14,4 +14,6 @@ pipeline:
     pull: true
     secrets: [ webhook_url ]
     when:
+      branch: master
+      event: push
       status: [ success ]
