--- a/.drone.windows.yml
+++ b/.drone.windows.yml
@@ -1,22 +1,23 @@
 ---
 kind: pipeline
-name: windows-amd64
+name: windows-1809
 
 platform:
   os: windows
   arch: amd64
+  version: 1809
 
 steps:
 - name: dryrun
   pull: always
-  image: plugins/docker:windows-amd64
+  image: plugins/docker:windows-1809
   settings:
-    dockerfile: docker/Dockerfile.windows.amd64
+    dockerfile: docker/Dockerfile.windows.1809
     dry_run: true
     password:
       from_secret: docker_password
     repo: plugins/base
-    tags: windows-amd64
+    tags: windows-1809
     username:
       from_secret: docker_username
   when:
@@ -25,11 +26,11 @@ steps:
 
 - name: publish
   pull: always
-  image: plugins/docker:windows-amd64
+  image: plugins/docker:windows-1809
   settings:
     auto_tag: true
-    auto_tag_suffix: windows-amd64
-    dockerfile: docker/Dockerfile.windows.amd64
+    auto_tag_suffix: windows-1809
+    dockerfile: docker/Dockerfile.windows.1809
     password:
       from_secret: docker_password
     repo: plugins/base
