--- a/.drone.yml
+++ b/.drone.yml
@@ -190,7 +190,7 @@ platform:
 steps:
 - name: manifest
   pull: always
-  image: plugins/manifest:linux-amd64
+  image: plugins/manifest:1
   settings:
     ignore_missing: true
     password:
@@ -204,7 +204,7 @@ steps:
 
 - name: microbadger
   pull: always
-  image: plugins/webhook:linux-amd64
+  image: plugins/webhook:1
   settings:
     url:
       from_secret: microbadger_url
@@ -215,5 +215,11 @@ steps:
 trigger:
   branch:
   - master
+
+depends_on:
+- linux-amd64
+- linux-arm64
+- linux-arm
+- linux-multiarch
 
 ...
