Match dockerfiles by regexp

--- a/renovate.json
+++ b/renovate.json
@@ -4,12 +4,7 @@
   ],
   "docker": {
     "fileMatch": [
-      "/docker/Dockerfile.linux.multiarch",
-      "/docker/Dockerfile.linux.amd64",
-      "/docker/Dockerfile.linux.arm",
-      "/docker/Dockerfile.linux.arm64",
-      "/docker/Dockerfile.windows.1803",
-      "/docker/Dockerfile.windows.1809"
+      "docker/Dockerfile.*",
     ]
   },
   "labels": [
