--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ steps:
   pull: always
   image: plugins/docker:linux-amd64
   settings:
+    daemon_off: false
     dockerfile: docker/Dockerfile.linux.amd64
     dry_run: true
     password:
@@ -29,6 +30,7 @@ steps:
   settings:
     auto_tag: true
     auto_tag_suffix: linux-amd64
+    daemon_off: false
     dockerfile: docker/Dockerfile.linux.amd64
     password:
       from_secret: docker_password
@@ -37,11 +39,14 @@ steps:
       from_secret: docker_username
   when:
     event:
-    - push
+      exclude:
+      - pull_request
 
 trigger:
-  branch:
-  - master
+  ref:
+  - refs/heads/master
+  - "refs/tags/**"
+  - "refs/pull/**"
 
 ---
 kind: pipeline
@@ -56,6 +61,7 @@ steps:
   pull: always
   image: plugins/docker:linux-arm64
   settings:
+    daemon_off: false
     dockerfile: docker/Dockerfile.linux.arm64
     dry_run: true
     password:
@@ -74,6 +80,7 @@ steps:
   settings:
     auto_tag: true
     auto_tag_suffix: linux-arm64
+    daemon_off: false
     dockerfile: docker/Dockerfile.linux.arm64
     password:
       from_secret: docker_password
@@ -82,11 +89,14 @@ steps:
       from_secret: docker_username
   when:
     event:
-    - push
+      exclude:
+      - pull_request
 
 trigger:
-  branch:
-  - master
+  ref:
+  - refs/heads/master
+  - "refs/tags/**"
+  - "refs/pull/**"
 
 ---
 kind: pipeline
@@ -101,6 +111,7 @@ steps:
   pull: always
   image: plugins/docker:linux-arm
   settings:
+    daemon_off: false
     dockerfile: docker/Dockerfile.linux.arm
     dry_run: true
     password:
@@ -119,6 +130,7 @@ steps:
   settings:
     auto_tag: true
     auto_tag_suffix: linux-arm
+    daemon_off: false
     dockerfile: docker/Dockerfile.linux.arm
     password:
       from_secret: docker_password
@@ -127,11 +139,14 @@ steps:
       from_secret: docker_username
   when:
     event:
-    - push
+      exclude:
+      - pull_request
 
 trigger:
-  branch:
-  - master
+  ref:
+  - refs/heads/master
+  - "refs/tags/**"
+  - "refs/pull/**"
 
 ---
 kind: pipeline
@@ -190,31 +205,27 @@ platform:
 steps:
 - name: manifest
   pull: always
-  image: plugins/manifest:1
+  image: plugins/manifest
   settings:
+    auto_tag: true
     ignore_missing: true
     password:
       from_secret: docker_password
     spec: docker/manifest.tmpl
     username:
       from_secret: docker_username
-  when:
-    event:
-    - push
 
 - name: microbadger
   pull: always
-  image: plugins/webhook:1
+  image: plugins/webhook
   settings:
-    url:
+    urls:
       from_secret: microbadger_url
-  when:
-    event:
-    - push
 
 trigger:
-  branch:
-  - master
+  ref:
+  - refs/heads/master
+  - "refs/tags/**"
 
 depends_on:
 - linux-amd64
