--- a/docker/Dockerfile.windows.1803
+++ b/docker/Dockerfile.windows.1803
@@ -1,12 +1,9 @@
 # escape=`
-FROM mcr.microsoft.com/powershell:nanoserver-1803@sha256:df4f787b57553a069246386a019a68538a419ec31bf7a930e63684fc9bda8a66
+FROM mcr.microsoft.com/windows/servercore:1803@sha256:5d6ed58d7f27598db7a61b7a38cd755fa8165ae726aff39f14aa52468f0248dd
 
 LABEL maintainer="Drone.IO Community <drone-dev@googlegroups.com>" `
   org.label-schema.name="Drone Base" `
   org.label-schema.vendor="Drone.IO Community" `
   org.label-schema.schema-version="1.0"
 
-USER ContainerAdministrator
-RUN setx /M PATH "%PATH%;C:\Program Files\PowerShell"
-
-SHELL ["pwsh", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
