--- a/.drone.windows.yml
+++ b/.drone.windows.yml
@@ -148,7 +148,7 @@ steps:
   pull: always
   image: plugins/webhook
   settings:
-    url:
+    urls:
       from_secret: microbadger_url
   when:
     event:
