--- a/docker/Dockerfile.windows.1903
+++ b/docker/Dockerfile.windows.1903
@@ -1,5 +1,5 @@
 # escape=`
-FROM mcr.microsoft.com/windows/servercore:1903
+FROM mcr.microsoft.com/powershell:nanoserver-1903
 
 LABEL maintainer="Drone.IO Community <drone-dev@googlegroups.com>" `
   org.label-schema.name="Drone Base" `
