--- a/docker/Dockerfile.windows.1809
+++ b/docker/Dockerfile.windows.1809
@@ -1,5 +1,6 @@
 # escape=`
 FROM mcr.microsoft.com/powershell:nanoserver-1809@sha256:e1f802ad42617d536f826538afdd1d4911908ddd6aaa88ad9752b4f180f5da15
+USER ContainerAdministrator
 
 LABEL maintainer="Drone.IO Community <drone-dev@googlegroups.com>" `
   org.label-schema.name="Drone Base" `
