Allow renovate to approve and merge PRs
The Windows base images get updated on a fairly regular cadence so just let Renovate approve them so they can be automatically merged.

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,7 +2,7 @@ repository:
   name: drone-base
   description: Base image used by the plugins
   homepage:
-  topics: drone
+  topics: drone, drone-plugin
 
   private: false
   has_issues: true
@@ -69,7 +69,9 @@ branches:
           - continuous-integration/drone/pr
       enforce_admins: false
       restrictions:
+        apps:
+          - renovate
         users: []
         teams:
           - Admins
-          - Captain
+          - Maintainers
