Cleanup after move to harness.drone.io
Modify README with correct links and correct build instructions.

Remove Dockerfiles that are no longer built in CI. Remove linux arm image. Remove unsupported windows images, 1903, 1909 and 2004.

Remove old starlark build. Update renovate config. Add a newline.

--- a/renovate.json
+++ b/renovate.json
@@ -9,8 +9,8 @@
   ],
   "dockerfile": {
     "fileMatch": [
-      "docker/Dockerfile\\.linux\\.(arm|arm64|amd64|multiarch)",
-      "docker/Dockerfile\\.windows\\.(1803|1809|1903|1909|2004)"
+      "docker/Dockerfile\\.linux\\.(arm64|amd64|multiarch)",
+      "docker/Dockerfile\\.windows\\.(1809|ltsc2022)"
     ],
     "pinDigests": true
   },
